--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,13 +3,23 @@ layout: default
 ---
 <div class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+  <div id="header_background" class="jumbotron">
+    <header class="post-header">
+      <h1 class="post-title">{{ page.title }}</h1>
+      <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+    </header>
+  </div>
 
   <article class="post-content">
     {{ content }}
+    
+    <a href="{{ page.image_attribution }}">Image attribution</a>
   </article>
 
 </div>
+
+
+<script>
+$("#header_background").css("background-image", "url(/images/{{ page.image }})");  
+
+</script>
