--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,12 @@
         <ul class="contact-list">
           <li>{{ site.title }}</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li>
+            Mobile: <a href="tel:0430013554">0430 013 554</a>
+          </li>
+          <li>
+            <p class="rss-subscribe"><a href='{{ "/feed.xml" | prepend: site.baseurl }}'>Subscribe via RSS</a></p>
+          </li>
         </ul>
       </div>
 
