--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,19 +3,19 @@ layout: default
 ---
 <div class="post">
 
-  <div id="header_background" class="jumbotron">
+  <div id="header_background" class="jumbotron" style="width:100%">
     <header class="post-header">
       <h1 class="post-title">{{ page.title }}</h1>
       <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
     </header>
   </div>
-
+  <div class="container">
   <article class="post-content">
     {{ content }}
     
     <a href="{{ page.image_attribution }}">Image attribution</a>
   </article>
-
+  </div>
 </div>
 
 
