--- a/css/main.scss
+++ b/css/main.scss
@@ -22,7 +22,7 @@ $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
-$content-width:    800px;
+$content-width:    1200px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
@@ -50,3 +50,13 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting"
 ;
+
+
+.jumbotron {
+    text-align: center;
+}
+
+
+h1.centered {
+    text-align: center;
+}
