Blog posts now correctly do background images on dev, and the API calls work (for one endpoint at this stage)

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,8 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <script src="/static/js/jquery.js"></script>
+  <script src="{{ "/js/jquery.js" | prepend: site.static_url }}"></script>
+  <script src="{{ "/js/datapipeline_api.js" | prepend: site.static_url }}"></script>
   
   <link href="{{ "/css/bootstrap.min.css" | prepend: site.static_url }}" rel="stylesheet">
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.static_url }}">
