Word cloud api integration

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,10 +8,12 @@
 
   <script src="{{ "/js/jquery.js" | prepend: site.static_url }}"></script>
   <script src="{{ "/js/datapipeline_api.js" | prepend: site.static_url }}"></script>
-  
+  <script src="{{ "/js/jqcloud.js" | prepend: site.static_url }}"></script>
+
   <link href="{{ "/css/bootstrap.min.css" | prepend: site.static_url }}" rel="stylesheet">
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.static_url }}">
-  
+  <link rel="stylesheet" href="{{ "/css/jqcloud.css" | prepend: site.static_url }}">
+
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 </head>
