--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,16 @@
 ---
 layout: default
 ---
-<div class="post">
 
+<div class="post">
+    <center>
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
-
-  <article class="post-content">
-    {{ content }}
-  </article>
-
+    </center>
+  <div class="container">
+      <article class="post-content">
+        {{ content }}
+      </article>
+  </div>
 </div>
