Project Backup website

--- a/css/main.scss
+++ b/css/main.scss
@@ -63,6 +63,10 @@ h1.centered {
     text-align: center;
 }
 
+div.centered{
+  text-align: center;
+}
+
 h1.post-title{
   text-shadow:
   -1px -1px 0 #FFF,
