Advertisement for the book

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,8 @@ layout: default
     <a href="{{ page.image_attribution }}">Image attribution</a>
   </article>
   </div>
+    {% include book.html %}
+
 </div>
 
 
