--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -60,3 +60,11 @@
   </div>
 
 </footer>
+
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="{{ "/js/bootstrap.js" | prepend: site.static_url }}"></script>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script src="{{ "/js/ie10-viewport-bug-workaround..js" | prepend: site.static_url }}"></script>
