--- a/css/main.scss
+++ b/css/main.scss
@@ -103,3 +103,9 @@ div.word_cloud{
 div.advertisement{
   text-align: center;
 }
+
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+  width: 70%;
+  margin: auto;
+}
