--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@ layout: default
 <div class="post">
     <center>
   <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
+    <h1 class="post-title">{{ page.page-title | page.title }}</h1>
   </header>
     </center>
   <div class="container">
