added subscribe button to all pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -58,7 +58,7 @@
     </div>
 
   </div>
-
+<script type="text/javascript" src="https://app.simplycast.com/?q=forms/getForm&i=114592&type=modal"></script>
 </footer>
 
 <!-- Bootstrap core JavaScript
