--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="post">
 
-  <div id="header_background" class="jumbotron" style="width:100%;background-image:url(/images/{{ page.image }});">
+  <div id="header_background" class="jumbotron" style=" background-repeat:no-repeat; width:100%;background-image:url(/images/{{ page.image }});">
     <header class="post-header">
       <h1 class="post-title">{{ page.title_view }}</h1>
       <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
