--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,12 @@ layout: default
 <div class="post">
 
   <div id="header_background" class="jumbotron" style=" background-repeat:no-repeat; width:100%;background-image:url(/images/{{ page.image }});">
+    <div class=semi>
     <header class="post-header">
       <h1 class="post-title">{{ page.title_view }}</h1>
       <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
     </header>
+    </div>
   </div>
   <div class="container">
   <article class="post-content">
