--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,13 +13,50 @@
         </svg>
       </a>
 
-      <div class="trigger">
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
-        {% endfor %}
-      </div>
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="{{ site.baseurl }}/Blog/">Blog</a>
+      <a class="navbar-brand" href="{{ site.baseurl }}/smallbusinesssurvey/">Survey</a>
+      <a class="navbar-brand" href="{{ site.baseurl }}/Newsletter/">Newsletter</a>
+      <a class="navbar-brand" href="{{ site.baseurl }}/services/">Services</a>
+    </div>
+
+    
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+                <li><a href="{{ site.baseurl }}/about/">Company</a></li>
+            <li><a href="{{ site.baseurl }}/casestudy/">Case Study</a></li>
+            <li><a href="{{ site.baseurl }}/contactus/">Contact us</a></li>
+    
+          </ul>
+        </li>
+      </ul>
+ 
+      
+         
+        
+     
+      
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+      
+
+    
+      
+      
     </nav>
 
   </div>
