--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
 
-    <div class="wrapper">
+    <div class="wrapper site-wrapper">
 
         <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
