change blog page and centered forms

--- a/css/main.scss
+++ b/css/main.scss
@@ -161,3 +161,26 @@ margin-left: 2cm;
 .site-wrapper{
 margin-left: 1cm;
 }
+
+
+.centered {
+    text-align:center;
+}
+
+
+.centered2 {
+    text-align:center;
+    margin: auto;
+    display:table;
+    width:500px;
+    height: 350px;
+}
+
+
+.bloglisting{
+
+  max-height: 250px;
+
+
+
+}
