--- a/css/main.scss
+++ b/css/main.scss
@@ -184,3 +184,45 @@ margin-left: 1cm;
 
 
 }
+
+.bio{
+
+  height:201.614px;
+
+
+}
+
+
+
+.centeredbio {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.biosquish {
+
+  padding: 5em;
+  background-color:#6796EB;
+  border: 0px;
+
+}
+
+.bioheader{
+  font-family: Consolas;
+  font-size: 300%;
+  color: #FFCC60;
+
+
+
+
+}
+
+.colour {
+  color: #FFCC60;
+}
+
+
+
+
+
+
