--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,6 +43,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="{{ site.baseurl }}/about/">Company</a></li>
                                     <li><a href="{{ site.baseurl }}/casestudy/">Case Study</a></li>
+                                    <li><a href="{{ site.baseurl }}/resources/">Resources</a></li>
                                     <li><a href="{{ site.baseurl }}/contactus/">Contact us</a></li>
 
                                 </ul>
