added terms and conditions

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,6 +53,7 @@
 
       <div class="footer-col  footer-col-3">
         <p class="text">{{ site.description }}</p>
+        <a href="t&c">Terms and conditions</a>
       </div>
 
     </div>
