add img responsive

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
     </div>
   </div>
   <div class="container">
-  <article class="post-content">
+  <article class="post-content img-responsive" >
     {{ content }}
     
     <a href="{{ page.image_attribution }}">Image attribution</a>
