fixed t&c page link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,7 +53,7 @@
 
       <div class="footer-col  footer-col-3">
         <p class="text">{{ site.description }}</p>
-        <a href="t&c">Terms and conditions</a>
+        <a href='{{ "/t&c" | prepend: site.baseurl }}'> Terms and conditions</a>
       </div>
 
     </div>
