added logo and new carousel

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
     <div class="wrapper site-wrapper">
 
-        <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+        <a class="site-title" href="{{ site.baseurl }}/"><img style="text-align:center" src='{{ "/images/logo/hex.png" | prepend: site.static_url }}'  height=120px><img style="text-align:center" src='{{ "/images/logo/logo.png" | prepend: site.static_url }}'  height=120px></a>
 
         <nav class="site-nav">
             <a href="#" class="menu-icon">
